➕ Create entities and repositories inside domain

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -3,9 +3,10 @@
 {% block title %}{% endblock %}
 
 {% block body %}
-
     <h1>Hello World!</h1>
     <button class="btn btn-success">Test</button>
+    {{ dump(users) }}
+    {{ dump(tests) }}
 {% endblock %}
 
 {% block javascripts %}{% endblock %}
