➕ Create home/login page

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,8 +2,9 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
-        <title>{% block title %}Welcome to What In The Word!{% endblock %}</title>
+        <title>{% block title %}{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
