➕ Create register page and bind it to register service

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,12 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-success">
+                {{ message }}
+            </div>
+        {% endfor %}
+
         {% block body %}{% endblock %}
 
         <script src="{{ asset('build/app.js') }}"></script>
