--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -20,7 +20,7 @@
                     <button type="submit" class="btn btn-primary w-100">Log In</button>
                 </form>
                 <hr class="w-75" />
-                <a href="#"><button class="btn btn-success">Create New Account</button></a>
+                <a href="{{ path('user_register_page') }}"><button class="btn btn-success">Create New Account</button></a>
             </div>
         </div>
     </div>
