--- a/templates/register.html.twig
+++ b/templates/register.html.twig
@@ -7,22 +7,30 @@
         <div class="row h-100 align-items-center justify-content-center">
             <div id="register_form" class="col-md-5 bg-light rounded shadow" style="padding-top: 20px; padding-bottom: 20px;">
                 <h1 class="text-center" style="margin-bottom: 30px;">Create a new account</h1>
-                <form id="login_form" action="{{ path('user_register') }}" method="POST">
+                <form id="register_form" action="{{ path('user_register') }}" method="POST">
                     <div class="form-group">
-                        <input type="text" name="username" class="form-control" placeholder="Username"/>
+                        <input id="usernameInput" type="text" name="username" class="form-control" placeholder="Username"/>
+                        <small id="usernameInputErrorMessage" class="text-danger" style="display: none"></small>
                     </div>
                     <div class="form-group">
-                        <input type="email" name="email" class="form-control" placeholder="Email address"/>
+                        <input id="emailInput" type="email" name="email" class="form-control" placeholder="Email address"/>
+                        <small id="emailInputErrorMessage" class="text-danger" style="display: none"></small>
                     </div>
                     <div class="form-group">
-                        <input type="password" name="password" class="form-control" placeholder="Password"/>
+                        <input id="passwordInput" type="password" name="password" class="form-control" placeholder="Password"/>
+                        <small id="passwordInputErrorMessage" class="text-danger" style="display: none"></small>
                     </div>
                     <div class="form-group">
-                        <input type="password" name="repeatedPassword" class="form-control" placeholder="Repeat the password"/>
+                        <input id="repeatedPasswordInput" type="password" name="repeatedPassword" class="form-control" placeholder="Repeat the password"/>
+                        <small id="repeatedPasswordInputErrorMessage" class="text-danger" style="display: none"></small>
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Create account</button>
                 </form>
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block javascripts %}
+    {{ encore_entry_script_tags('registerFormValidator') }}
 {% endblock %}
