🔄 Improve views and move styles to css files

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -8,3 +8,11 @@ body {
   height: 100%;
   background-color: #6290c3;
 }
+
+form > small {
+  display: none;
+}
+
+#footer_text {
+  margin-top: 15px;
+}
