--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -2,6 +2,10 @@
 
 {% block title %}Welcome to What In The Word!{% endblock %}
 
+{% block stylesheets %}
+    {{ encore_entry_link_tags('loginCss') }}
+{% endblock %}
+
 {% block body %}
     <div class="container h-75">
         <div class="row h-100 align-items-center">
@@ -9,25 +13,27 @@
                 <h1>What In The Word!</h1>
                 <p>This app will help you remember all the words that you try to learn. You will have to introduce the words you want to memorize with it's translation. Everyday, when entering to the app you will see that transations have disappeard and you have to write them again. Repeating this process everyday will help you remember anything!</p>
             </div>
-            <div id="login_form" class="offset-md-2 col-md-4 bg-light rounded shadow" style="padding-top: 20px; padding-bottom: 20px;">
+            <div id="login_div" class="offset-md-2 col-md-4 bg-light rounded shadow">
                 <form id="login_form" action="{{ path('user_login') }}" method="POST">
                     <div class="form-group">
                         <input id="emailInput" type="email" name="email" class="form-control" placeholder="Email address"/>
-                        <small id="emailInputErrorMessage" class="text-danger" style="display: none"></small>
+                        <small id="emailInputErrorMessage" class="text-danger"></small>
                     </div>
                     <div class="form-group">
                         <input id="passwordInput" type="password" name="password" class="form-control" placeholder="Password"/>
-                        <small id="passwordInputErrorMessage" class="text-danger" style="display: none"></small>
+                        <small id="passwordInputErrorMessage" class="text-danger"></small>
                     </div>
                     <button type="submit" class="btn btn-primary w-100">Log In</button>
                 </form>
                 <hr class="w-75" />
-                <a href="{{ path('user_register_page') }}"><button class="btn btn-success">Create New Account</button></a>
+                    <a class="btn btn-success form-control" href="{{ path('user_register_page') }}">Create New Account</a>
+                    <a id="demo_button" class="btn btn-info form-control" href="#">Demo</a>
+                </div>
             </div>
         </div>
     </div>
     <footer class="text-center fixed-bottom bg-light">
-        <p class="text-secondary small" style="margin-top: 15px;">
+        <p id="footer_text" class="text-secondary small">
             Made by Oriol Buqueras Solsona
             <a href="https://linkedin.com/in/oriol-buqueras-solsona-3b1056120"><img src="https://image.flaticon.com/icons/svg/174/174857.svg" class="navbar-toggler-icon" /></a>
             <a href="https://github.com/oriool"><img src="https://image.flaticon.com/icons/svg/25/25231.svg" class="navbar-toggler-icon" /></a>
