➕ Add services to load categories by user

--- a/templates/mainApp.html.twig
+++ b/templates/mainApp.html.twig
@@ -2,4 +2,7 @@
 
 {% block title %}WITW App{% endblock %}
 
-{% block body %}you are already logged in!{% endblock %}
+{% block body %}
+    you are already logged in!
+    {{ dump(categories) }}
+{% endblock %}
