➕ Create view for the app without logic

--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -1,12 +1,12 @@
 @import "~bootstrap/scss/bootstrap";
 
 html {
-  height: 100%;
+  height: 93.5%;
 }
 
 body {
   height: 100%;
-  background-color: #6290c3;
+  background-color: #00afcd;
 }
 
 form > small {
