➕ Add js to check the answers

--- a/assets/css/main_app.scss
+++ b/assets/css/main_app.scss
@@ -171,6 +171,7 @@ header {
     @extend .answer;
     border-color: lightgreen;
     box-shadow: 0 0 0 0.1rem lightgreen;
+    pointer-events: none;
 }
 
 //.translation {
