--- a/templates/main_app.html.twig
+++ b/templates/main_app.html.twig
@@ -10,7 +10,7 @@
     <header class="navbar-background-blue">
         <a id="logout-button" class="btn btn-light btn-sm" href="{{ path('user_logout') }}">Log Out</a>
         <div class="menu-buttons">
-            <button class="btn btn-light btn-sm float-left menu-btn">Add category</button>
+            <button class="btn btn-light btn-sm float-left menu-btn" onclick="addFormToCreateCategory()">Add category</button>
             <button class="btn btn-outline-secondary btn-sm float-left menu-btn">Edit words</button>
             <button class="btn btn-outline-secondary btn-sm float-left menu-btn">Help</button>
         </div>
@@ -58,6 +58,7 @@
     {{ parent() }}
     {{ encore_entry_script_tags('wordCreator') }}
     {{ encore_entry_script_tags('answerChecker') }}
+    {{ encore_entry_script_tags('categoryCreator') }}
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
