--- a/assets/css/main_app.scss
+++ b/assets/css/main_app.scss
@@ -45,6 +45,7 @@ header {
     margin-left: 15px;
     margin-bottom: 10px;
     padding-top: 10px;
+    cursor: pointer;
     &-input {
         margin-left: 10px !important;
         margin-bottom: 7px !important;
@@ -137,7 +138,7 @@ header {
     padding-top: 10px;
 }
 
-#arrow {
+.arrow {
     float: left;
     margin-left: 15px;
     margin-right: 15px;
