--- a/templates/main_app.html.twig
+++ b/templates/main_app.html.twig
@@ -11,8 +11,6 @@
         <a id="logout-button" class="btn btn-light btn-sm" href="{{ path('user_logout') }}">Log Out</a>
         <div class="menu-buttons">
             <button class="btn btn-light btn-sm float-left menu-btn" onclick="addFormToCreateCategory()">Add category</button>
-            <button class="btn btn-outline-secondary btn-sm float-left menu-btn">Edit words</button>
-            <button class="btn btn-outline-secondary btn-sm float-left menu-btn">Help</button>
         </div>
     </header>
 
@@ -20,7 +18,9 @@
     {% for category in categories %}
         <div class="category-container">
             <div class="category">
-                <div class="category-title">{{ category.title }}</div>
+                <div id="category-title-{{ category.id }}">
+                    <div class="category-title" onclick="enableTitleEditMode(this)" data-category-id="{{ category.id }}">{{ category.title }}</div>
+                </div>
                 <div id="create-word-cell-{{ category.id }}" class="create-word-cell">
                     <p class="small" data-category-id="{{ category.id }}" onclick="showWordCreationForm(this)">+ Add new word</p>
                 </div>
@@ -32,10 +32,8 @@
                     <div class="word-cell">
                         <p class="word-text small">{{ word.main }}</p>
                     </div>
-                    <p id="arrow">➡️</p>
-                    {% if false %}
-                        <input class="answer small" type="text" maxlength="16" placeholder="new translation"/>
-                    {% elseif (word.answerDate < date('-12 hours')) %}
+                    <p id="arrow-{{ word.id }}" class="arrow">➡️</p>
+                    {% if (word.answerDate < date('-12 hours')) %}
                         <form data-word-id="{{ word.id }}" onsubmit="checkAnswer(this, event)">
                             <input id="answer-{{ word.id }}" class="answer small" maxlength="16" type="text" autocomplete="off" />
                             <button type="submit" hidden></button>
@@ -59,6 +57,7 @@
     {{ encore_entry_script_tags('wordCreator') }}
     {{ encore_entry_script_tags('answerChecker') }}
     {{ encore_entry_script_tags('categoryCreator') }}
+    {{ encore_entry_script_tags('editModeServices') }}
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
