➕ Add services to remove a word

--- a/assets/css/main_app.scss
+++ b/assets/css/main_app.scss
@@ -1,5 +1,6 @@
 @import "main_app_css/header";
 @import "main_app_css/category";
+@import "main_app_css/word_creation_form";
 @import "main_app_css/word";
 
 .clearfix {
