➕ Create demo services

--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -27,7 +27,7 @@
                 </form>
                 <hr class="w-75" />
                     <a class="btn btn-success form-control" href="{{ path('user_register_page') }}">Create New Account</a>
-                    <a id="demo_button" class="btn btn-info form-control" href="#">Demo</a>
+                    <a id="demo_button" class="btn btn-info form-control" href="{{ path('start_demo') }}">Demo</a>
                 </div>
             </div>
         </div>
