🔄 Update login and readme to reference one each other

--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -11,7 +11,7 @@
         <div class="row h-100 align-items-center">
             <div id="welcome_text" class="col-md-5 text-center text-white">
                 <h1>What In The Word!</h1>
-                <p>This app will help you remember all the words that you try to learn. You will have to introduce the words you want to memorize with it's translation. Everyday, when entering to the app you will see that transations have disappeard and you have to write them again. Repeating this process everyday will help you remember anything!</p>
+                <p>Are you learning a new language? This app will help you remember all the new vocabulary. In this app you will be able to introduce the words you want to memorize with its translation. Every day, when entering to the app you will see that translations have disappeared, and you have to write them again. Further explanation <a href="https://github.com/oriool/what-in-the-word#what-in-the-word-app">here</a>.</p>
             </div>
             <div id="login_div" class="offset-md-2 col-md-4 bg-light rounded shadow">
                 <form id="login_form" action="{{ path('user_login') }}" method="POST">
