--- a/assets/css/main_app_css/category.scss
+++ b/assets/css/main_app_css/category.scss
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     white-space: nowrap;
-    overflow-y: hidden;
+    overflow-y: auto;
     overflow-x: auto;
 }
 
